pasta publica, cor de botoes

--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -1,1 +1,3 @@
 <h1>welcome</h1>
+<button class="btn btn-primary btn-custom" data-color="#000000">Login</button>
+<script src="/js/btnColor.js"></script>
