--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,40 +1,50 @@
-li{
+:root{
+   --maincolor: #ffffff;
+}
+html {
+   box-sizing: border-box;
+}
+
+li {
    list-style: none;
 }
-.like{
+
+.like {
    cursor: pointer;
 }
-.post{
+
+.post {
    padding: 2%;
    border: 1px solid #c0c1c4;
    margin-bottom: 2%;
    border-radius: 2%;
 }
 
-.comment-box{
+.comment-box {
    width: 90% !important;
 }
 
-.pfp-post-header{
+.pfp-post-header {
    float: left;
-   width:5%;
+   width: 5%;
    border-radius: 100%;
    margin-right: 10px;
 }
 
-.lead{
+.lead {
    text-decoration: none;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
    text-decoration: none !important;
 }
 
-.post-header{
+.post-header {
    margin-bottom: 3%;
 }
 
-.counter{
+.counter {
    font-weight: 600;
 }
 
@@ -44,13 +54,14 @@ a:hover, a:focus {
 }
 
 .posts {
-   margin-top:20%;
+   margin-top: 20%;
 }
-.row{
+
+.row {
    margin: 2% 0 20%;
 }
 
-.card-img-top:hover{
+.card-img-top:hover {
    opacity: 0.4;
 }
 
@@ -61,12 +72,23 @@ a:hover, a:focus {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
-   -ms-transform: translate(-50%, -50%);
    text-align: center;
- }
+}
 
- .jumbotron{
-   margin:10% 0 10% 0;
+.jumbotron {
+   margin: 10% 0 10% 0;
    border-radius: 32px;
    padding: 10%;
+}
+
+.btn {
+   background: var(--maincolor);
+   border: 0;
+   transition: all 0.3s ease;
+}
+
+.btn:hover {
+   background: #ffffff;
+   color: var(--maincolor);
+   border: 1px solid var(--maincolor);
 }
