--- a/views/user/register.handlebars
+++ b/views/user/register.handlebars
@@ -18,9 +18,18 @@
          <input type="password" name="password2" id="password2" class="form-control">
       </div>
       <div class="form-group">
+         <img class="preview" alt="" style="border-radius:50%; width:30%;" style="width: 50%;">
+      </div>
+      <div class="form-group">
+         <br>
+         <label for="avatar" class="lead">Imagem de perfil</label>
+         <input type="file" name="avatar" id="avatar" class="form-control-file">
+      </div>
+      <div class="form-group">
          <button type="submit" class="btn btn-primary">
             Registrar
          </button>
       </div>
    </form>
 </div>
+<script src="/js/imgPreview.js"></script>
