--- a/views/index/welcome.handlebars
+++ b/views/index/welcome.handlebars
@@ -1,3 +1,3 @@
 <h1>welcome</h1>
-<button class="btn btn-primary btn-custom" data-color="#000000">Login</button>
+<a class="btn btn-primary btn-custom" data-color="var(--bgcolor)" href="/user/login">Login</a>
 <script src="/js/btnColor.js"></script>
