--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,32 +1,34 @@
-   <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark mb-5"
-      style="box-shadow: 0px 1px 23px -2px #000000">
-      <a class="navbar-brand" href="#">Take N' Post</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-               <a class="nav-link" href="/">Página inicial </a>
-            </li>
-            <!-- se usuário nao estiver logado-->
-            <li class="nav-item">
-               <a class="nav-link" href="/user/login">Login</a>
-            </li>
-            <!-- /se -->
-            <!-- se usuário estiver logado-->
-            <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  {{name}}
-               </a>
-               <!-- /se -->
-               <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="/users/profile">Perfil</a>
-                  <a class="dropdown-item" href="#">Postar</a>
-               </div>
-            </li>
-         </ul>
-      </div>
-   </nav>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark mb-5" style="box-shadow: 0px 1px 23px -2px #000000">
+   <a class="navbar-brand" href="#">Take N' Post</a>
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+   </button>
+   <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+         <li class="nav-item active">
+            <a class="nav-link" href="/">Página inicial </a>
+         </li>
+         {{#if user}}
+         <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+               aria-haspopup="true" aria-expanded="false">
+               Conta
+            </a>
+         </li>
+         <li class="nav-item">
+            <a class="nav-link" href="/user/logout">Logout</a>
+         </li>
+         {{else}}
+         <li class="nav-item">
+            <a class="nav-link" href="/user/login">Login</a>
+         </li>
+         {{/if}}
+         <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="/users/profile">Perfil</a>
+            <a class="dropdown-item" href="#">Postar</a>
+         </div>
+         </li>
+      </ul>
+   </div>
+</nav>
