--- a/views/user/login.handlebars
+++ b/views/user/login.handlebars
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron bg-custom">
    <form action="/user/login" method="POST">
       <h1>Log in</h1>
       <div class="form-group">
@@ -21,3 +21,4 @@
       <a href="/user/login/google" class="btn btn-danger">Entre com o google</a>
    </center>
 </div>
+<script src="/js/bgColor.js"></script>
