--- a/views/user/register.handlebars
+++ b/views/user/register.handlebars
@@ -1,9 +1,13 @@
-<div class="jumbotron">
+<div class="jumbotron bg-custom">
    <form action="/user/register" method="POST">
       <h1>Registrar</h1>
       <div class="form-group">
          <label for="name">Nome</label>
          <input type="text" name="name" id="name" class="form-control" value="{{name}}">
+      </div>
+      <div class="form-group">
+         <label for="name">Sobrenome</label>
+         <input type="text" name="name" id="lastName" class="form-control" value="{{name}}">
       </div>
       <div class="form-group">
          <label for="email" class="lead">Email</label>
@@ -32,4 +36,5 @@
       </div>
    </form>
 </div>
+
 <script src="/js/imgPreview.js"></script>
