--- a/views/user/register.handlebars
+++ b/views/user/register.handlebars
@@ -6,8 +6,8 @@
          <input type="text" name="name" id="name" class="form-control" value="{{name}}">
       </div>
       <div class="form-group">
-         <label for="name">Sobrenome</label>
-         <input type="text" name="name" id="lastName" class="form-control" value="{{name}}">
+         <label for="lastName">Sobrenome</label>
+         <input type="text" name="lastName" id="lastName" class="form-control" value="{{name}}">
       </div>
       <div class="form-group">
          <label for="email" class="lead">Email</label>
