--- a/views/user/feed.handlebars
+++ b/views/user/feed.handlebars
@@ -3,7 +3,7 @@
    <div class="post-header">
       <a href="/user/show/ID">
          <img src="/img/pfp2.jpg" class="pfp-post-header">
-         <p class="lead text-dark">{{user.name}}usuario</p>
+         <p class="lead text-dark">{{user.name}}</p>
       </a>
    </div>
    <figure>
@@ -39,5 +39,4 @@
 
 </div>
 <!--/each-->
-
 <script src="/js/likeButton.js"></script>
