adicionado botao para página de registro

--- a/views/user/login.handlebars
+++ b/views/user/login.handlebars
@@ -9,6 +9,9 @@
          <label for="password" class="lead">Senha</label>
          <input type="password" name="password" id="senha" class="form-control">
       </div>
+      <small>
+         <p class="text-dark">Não tem uma conta? <a href="/user/register">Crie uma.</a></p>
+      </small>
       <div class="form-group">
          <button type="submit" class="btn btn-primary">
             Entrar
@@ -20,5 +23,5 @@
       <br>
       <a href="/user/login/google" class="btn btn-danger">Entre com o google</a>
    </center>
+
 </div>
-<script src="/js/bgColor.js"></script>
