--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -6,15 +6,9 @@
    </button>
    <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
-         <li class="nav-item active">
-            <a class="nav-link" href="/">Página inicial </a>
-         </li>
          {{#if user}}
-         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-               aria-haspopup="true" aria-expanded="false">
-               Conta
-            </a>
+         <li class="nav-item">
+            <a href="/user/add" class="nav-link">Novo post</a>
          </li>
          <li class="nav-item">
             <a class="nav-link" href="/user/logout">Logout</a>
@@ -24,12 +18,7 @@
             <a class="nav-link" href="/user/login">Login</a>
          </li>
          {{/if}}
-         <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/users/profile">Perfil</a>
-            <a class="dropdown-item" href="#">Postar</a>
-         </div>
-         </li>
+
       </ul>
    </div>
 </nav>
-
