--- a/views/user/add.handlebars
+++ b/views/user/add.handlebars
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-   <form action="/post/add" method="POST">
+   <form action="/user/add" method="POST">
       <h1>Adicionar Foto</h1>
       <div class="form-group">
          <img class="preview" style="width: 50%;">
@@ -11,6 +11,10 @@
       <div class="form-group">
          <label for="legenda" class="lead">Insira uma legenda</label>
          <input type="text" name="legenda" id="legenda" class="form-control">
+      </div>
+      <div class="form-check">
+         <input type="checkbox" class="form-check-input" id="check">
+         <label class="form-check-label" for="check" name="allowComments">Permitir comentarios</label>
       </div>
       <div class="form-group">
          <button type="submit" class="btn btn-primary">
