--- a/views/user/feed.handlebars
+++ b/views/user/feed.handlebars
@@ -1,14 +1,14 @@
 {{#each posts}}
 <div class="post">
    <div class="post-header">
-      <a href="/user/profile/{{user.id}}">
+      <a href="/user/profile/{{posts.user.id}}">
          <img src="/img/pfp2.jpg" class="pfp-post-header">
-         <p class="lead text-dark">{{user.name}}</p>
+         <p class="lead text-dark">{{posts.user.name}}</p>
       </a>
    </div>
    <figure>
       <img src="/img/land2.jpg" class="img-fluid">
-      <figcaption class="mt-2">Legenda da foto</figcaption>
+      <figcaption class="mt-2">{{posts.caption}}</figcaption>
    </figure>
    <div class="comment">
       <ul class="mr-auto navbar-nav my-3">
@@ -19,11 +19,11 @@
          </li>
          <li class="comment-section mt-1 mb-2">
             <ul>
-               {{#each comment}}
+               {{#each posts.comment}}
                <li class="comentario">
                   <p>
                      <a href="/users/id" class="usuario font-weight-bold text-dark">{{user.name}}</a>
-                     {{comment}}
+                     {{posts.comment}}
                   </p>
                </li>
                {{/each}}
