--- a/views/user/feed.handlebars
+++ b/views/user/feed.handlebars
@@ -15,7 +15,7 @@
          <li>
             <i class="like far fa-heart fa-2x"></i>
             <a href="/post/show/ID" class="text-dark"><i class="far fa-comments fa-2x comment-button"></i></a>
-            <p class="text-muted"><span class="likers text-dark">{{likes}}</span> curtiram isso</p>
+            <p class="text-muted"><span class="likers text-dark">{{posts.likes}}</span> curtiram isso</p>
          </li>
          <li class="comment-section mt-1 mb-2">
             <ul>
