--- a/views/user/feed.handlebars
+++ b/views/user/feed.handlebars
@@ -3,23 +3,23 @@
    <div class="post-header">
       <a href="/user/profile/{{posts.user.id}}">
          <img src="/img/pfp2.jpg" class="pfp-post-header">
-         <p class="lead text-dark">{{posts.user.name}}</p>
+         <p class="lead text-dark">{{user.name}}</p>
       </a>
    </div>
    <figure>
       <img src="/img/land2.jpg" class="img-fluid">
-      <figcaption class="mt-2">{{posts.caption}}</figcaption>
+      <figcaption class="mt-2">{{caption}}</figcaption>
    </figure>
    <div class="comment">
       <ul class="mr-auto navbar-nav my-3">
          <li>
             <i class="like far fa-heart fa-2x"></i>
             <a href="/post/show/ID" class="text-dark"><i class="far fa-comments fa-2x comment-button"></i></a>
-            <p class="text-muted"><span class="likers text-dark">{{posts.likes}}</span> curtiram isso</p>
+            <p class="text-muted"><span class="likers text-dark">{{likes}}</span> curtiram isso</p>
          </li>
          <li class="comment-section mt-1 mb-2">
             <ul>
-               {{#each posts.comment}}
+               {{#each comment}}
                <li class="comentario">
                   <p>
                      <a href="/users/id" class="usuario font-weight-bold text-dark">{{user.name}}</a>
