--- a/views/user/feed.handlebars
+++ b/views/user/feed.handlebars
@@ -14,7 +14,7 @@
       <ul class="mr-auto navbar-nav my-3">
          <li>
             <i class="like far fa-heart fa-2x"></i>
-            <a href="/user/show/{{id}}" class="text-dark"><i class="far fa-comments fa-2x comment-button"></i></a>
+            <i class="far fa-comments fa-2x comment-button"></i>
             <p class="text-muted"><span class="likers text-dark">{{likes}}</span> curtiram isso</p>
          </li>
          <li class="comment-section mt-1 mb-2">
@@ -40,3 +40,4 @@
 </div>
 {{/each}}
 <script src="/js/likeButton.js"></script>
+<script src="/js/comment.js"></script>
