--- a/views/user/feed.handlebars
+++ b/views/user/feed.handlebars
@@ -7,14 +7,12 @@
    </div>
    <figure>
       <img src="/img/land2.jpg" class="img-fluid">
-      <figcaption class="mt-2">{{caption}}</figcaption>
+      <figcaption class="mt-2 h6">{{caption}}</figcaption>
    </figure>
    <div class="comment">
       <ul class="mr-auto navbar-nav my-3">
          <li>
-            <i class="like far fa-heart fa-2x"></i>
             <i class="far fa-comments fa-2x comment-button"></i>
-            <p class="text-muted"><span class="likers text-dark">{{likes}}</span> curtiram isso</p>
          </li>
          <li class="comment-section mt-1 mb-2">
             <ul>
@@ -42,5 +40,4 @@
 <h3>Não há nada por aqui</h3>
 <a href="/user/add">Publicar algo</a>
 {{/if}}
-<script src="/js/likeButton.js"></script>
 <script src="/js/comment.js"></script>
