--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -11,6 +11,9 @@
             <a href="/user/add" class="nav-link">Novo post</a>
          </li>
          <li class="nav-item">
+            <a href="/user/dashboard" class="nav-link">Dashboard</a>
+         </li>
+         <li class="nav-item">
             <a class="nav-link" href="/user/logout">Logout</a>
          </li>
          {{else}}
