--- a/views/partials/_errors.handlebars
+++ b/views/partials/_errors.handlebars
@@ -1,4 +1,5 @@
-{{#if error}}
+<div class="container">
+  {{#if error}}
   <div class="alert alert-danger">{{error}}</div>
 {{/if}}
 
@@ -7,3 +8,4 @@
 {{else}}
 
 {{/each}}
+</div>
