--- a/views/user/add.handlebars
+++ b/views/user/add.handlebars
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-   <form action="/user/add" method="POST">
+   <form action="/user/add" method="POST" enctype="multipart/form-data">
       <h1>Adicionar Foto</h1>
       <div class="form-group">
          <img class="preview" style="width: 50%;">
