--- a/views/user/show.handlebars
+++ b/views/user/show.handlebars
@@ -6,7 +6,7 @@
       </a>
    </div>
    <figure>
-      <img src="/img/land2.jpg" class="img-fluid">
+      <img src="{{post.imgPath}}" class="img-fluid">
       <figcaption class="mt-2">{{caption}}</figcaption>
    </figure>
    <div class="comment">
